# mpeg-pcc-tmc13

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  COPYING  README.md  README.tools.md
GMFiles/: zeroMotion-ford-02-global-motion-matrix.txt  zeroMotion-qnx-approach-global-motion-matrix.txt  zeroMotion-qnx-bends-global-motion-matrix.txt  zeroMotion-qnx-exit-global-motion-matrix.txt
cfg/: README.md  cat1-tmc13-ctc-lossless-geom-lossy-attrs.yaml  cat1-tmc13-ctc-lossless-geom-no-attrs.yaml  cat1-tmc13-ctc-lossy-geom-lossy-attrs.yaml  cat3-tmc13-ctc-lossless-geom-lossless-attrs.yaml  cat3-tmc13-ctc-lossless-geom-lossy-attrs.yaml  cat3-tmc13-ctc-lossless-geom-nearlossless-attrs.yaml  cat3-tmc13-ctc-lossless-geom-no-attrs.yaml  cat3-tmc13-ctc-lossy-geom-lossy-attrs.yaml  cat3-tmc13-ctc-lossy-geom-no-attrs.yaml  cfg-predgeom.yaml  ctc-category-map.csv  ctc-lossless-geom-lossy-attrs.yaml  ctc-lossy-geom-lossy-attrs.yaml  ctc-lossy-geom-no-attrs.yaml  octree-liftt-ctc-lossless-geom-lossy-attrs.yaml  octree-liftt-ctc-lossy-geom-lossy-attrs.yaml  octree-predt-ctc-lossless-geom-lossless-attrs.yaml  octree-predt-ctc-lossless-geom-nearlossless-attrs.yaml  octree-raht-ctc-lossless-geom-lossless-attrs.yaml  octree-raht-ctc-lossless-geom-lossy-attrs.yaml  octree-raht-ctc-lossy-geom-lossy-attrs.yaml  sequences-cat1.yaml  sequences-cat2.yaml  sequences-cat3.yaml  trisoup-liftt-ctc-lossy-geom-lossy-attrs.yaml  trisoup-raht-ctc-lossy-geom-lossy-attrs.yaml
cfg/inter/: cfg-predgeom.yaml  octree-liftt-ctc-lossless-geom-lossy-attrs.yaml  octree-liftt-ctc-lossy-geom-lossy-attrs.yaml  octree-predt-ctc-lossless-geom-lossless-attrs.yaml  octree-predt-ctc-lossless-geom-nearlossless-attrs.yaml  octree-raht-ctc-lossless-geom-lossless-attrs.yaml  octree-raht-ctc-lossless-geom-lossy-attrs.yaml  octree-raht-ctc-lossy-geom-lossy-attrs.yaml
cfg/lossless-geom-lossy-attrs/arco_valentino_dense_vox12/r01/: decoder.cfg
cfg/lossless-geom-lossy-attrs/facade_00009_vox12/r03/: encoder.cfg
cfg/lossless-geom-lossy-attrs/facade_00009_vox12/r04/: encoder.cfg
cfg/lossless-geom-lossy-attrs/facade_00015_vox14/r01/: encoder.cfg
cfg/lossless-geom-lossy-attrs/facade_00015_vox14/r03/: encoder.cfg
cfg/lossless-geom-lossy-attrs/facade_00064_vox14/r04/: encoder.cfg
cfg/lossless-geom-lossy-attrs/frog_00067_vox20/r04/: encoder.cfg
cfg/lossless-geom-lossy-attrs/head_00039_vox12/r02/: encoder.cfg
cfg/lossless-geom-lossy-attrs/head_00039_vox20/r01/: encoder.cfg
cfg/lossless-geom-lossy-attrs/house_without_roof_00057_vox12/r01/: encoder.cfg
cfg/lossless-geom-lossy-attrs/house_without_roof_00057_vox20/r02/: encoder.cfg
cfg/lossless-geom-lossy-attrs/longdress_vox10_1300/r01/: encoder.cfg
cfg/lossless-geom-no-attrs/egyptian_mask_vox20/: encoder.cfg
cfg/lossless-geom-no-attrs/facade_00015_vox14/: encoder.cfg
cfg/lossless-geom-no-attrs/ford_02_q1mm/: decoder.cfg  encoder.cfg
cfg/lossless-geom-no-attrs/ford_03_q1mm/: decoder.cfg  encoder.cfg
cfg/lossless-geom-no-attrs/house_without_roof_00057_vox12/: encoder.cfg
cfg/lossless-geom-no-attrs/overpass_q1mm/: encoder.cfg
cfg/lossless-geom-no-attrs/redandblack_vox10_1550/: encoder.cfg
cfg/lossless-geom-no-attrs/stanford_area_4_vox16/: encoder.cfg
cfg/lossless-geom-no-attrs/staue_klimt_vox12/: decoder.cfg
cfg/lossless-geom-no-attrs/ulb_unicorn_hires_vox15/: encoder.cfg
cfg/lossless-geom-no-attrs/ulb_unicorn_vox13/: encoder.cfg
cfg/per-sequence/: citytunnel_q1mm.cfg  ford_01_q1mm.cfg  ford_02_q1mm.cfg  ford_03_q1mm.cfg  overpass_q1mm.cfg  tollbooth_q1mm.cfg
dependencies/: .clang-format  CMakeLists.txt
dependencies/arithmetic-coding/: CMakeLists.txt
dependencies/arithmetic-coding/inc/: ArithmeticCodec.h
dependencies/arithmetic-coding/src/: ArithmeticCodec.cpp  CMakeLists.txt
dependencies/nanoflann/: KDTreeVectorOfVectorsAdaptor.h  README.origin  nanoflann.hpp
dependencies/program-options-lite/: program_options_lite.cpp  program_options_lite.h
dependencies/schroedinger/: COPYING  COPYING.MPL  README.origin  schroarith.c  schroarith.h
dependencies/tbb/: CMakeLists.txt
doc/: .gitignore  .markdownlint.json  Makefile  README.about.md  README.build.md  README.options.md  README.usage.md  TMC3v0CfPParameters.docx  mpeg-pcc-tmc13-sw-manual.tex
global-motion-files/globalMotion/: ford_01_q1mm-global-motion-matrix-estimated.txt  ford_02_q1mm-global-motion-matrix-estimated.txt  ford_03_q1mm-global-motion-matrix-estimated.txt  gps-CognataQC1-matrix.txt  gps-CognataQC2-matrix.txt  gps-CognataQC3-matrix.txt  gps-CognataQC4-matrix.txt  gps-innovizqc1-matrix.txt  gps-innovizqc2-matrix.txt  gps-innovizqc3-matrix.txt  qnxadas-junction-approach-global-motion-matrix-estimated.txt  qnxadas-junction-exit-global-motion-matrix-estimated.txt  qnxadas-motorway-join-global-motion-matrix-estimated.txt  qnxadas-navigating-bends-global-motion-matrix-estimated.txt
global-motion-files/zeroMotion/: zeroMotion-ford-01-global-motion-matrix.txt  zeroMotion-ford-03-global-motion-matrix.txt  zeroMotion-qnx-join-global-motion-matrix.txt
results/: m59650-v1-EE13.51v3-vs-EE13.51v3+InterEM+GM.xlsm  m59650-v1-EE13.51v3-vs-EE13.51v3+InterEM.xlsm
scripts/: Makefile.tmc13-step  collect-tmc13.pl  gen-cfg.md  gen-cfg.pl  gen-cfg.sh  genversion.cmake
scripts/MPEG/PCC/: CSV.pm  Collate.pm  Util.pm
test/: runme_linux  runme_osx  runme_windows.bat
tmc3/: Attribute.h  AttributeCommon.cpp  AttributeCommon.h  AttributeDecoder.cpp  AttributeDecoder.h  AttributeEncoder.cpp  AttributeEncoder.h  BitReader.h  BitWriter.h  CMakeLists.txt  DualLutCoder.cpp  DualLutCoder.h  FixedPoint.cpp  FixedPoint.h  OctreeNeighMap.cpp  OctreeNeighMap.h  PCCKdTree.h  PCCMath.h  PCCMisc.h  PCCPointSet.h  PCCPointSetProcessing.h  PCCTMC3Common.h  PCCTMC3Decoder.h  PCCTMC3Encoder.h  PayloadBuffer.h  RAHT.cpp  RAHT.h  TMC3.cpp  TMC3.h  TMC3Config.h.in  attribute_raw.h  attribute_raw_decoder.cpp  attribute_raw_encoder.cpp  colourspace.h  constants.h  coordinate_conversion.cpp  coordinate_conversion.h  decoder.cpp  encoder.cpp  entropy.h  (+48 more)
tools/: ply-merge.cpp
(+189 files in other folders)
